--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-color: #f8e71c;
+            background-color: #222;
+            color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -16,13 +17,16 @@
             height: 100vh;
             margin: 0;
         }
+        h1 {
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
         #score {
-            font-size: 32px;
-            font-weight: bold;
-            margin: 20px;
+            font-size: 24px;
+            margin-bottom: 10px;
         }
         #energy {
-            font-size: 24px;
+            font-size: 18px;
             color: red;
             margin-bottom: 20px;
         }
@@ -33,9 +37,10 @@
         }
         #duck {
             width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+            transition: transform 0.1s;
+        }
+        #duck:active {
+            transform: scale(0.9);
         }
     </style>
 </head>
@@ -43,9 +48,7 @@
     <h1>Gugscon Tap</h1>
     <p id="score">Очки: 0</p>
     <p id="energy">Энергия: 10</p>
-    <button id="tap">
-        <img id="duck" src="ТВОЯ_ССЫЛКА_НА_УТКУ" alt="Утка">
-    </button>
+    <button id="tap"><img id="duck" src="https://i.imgur.com/9KYKtVh.png" alt="Утка"></button>
 
     <script>
         let score = 0;
@@ -70,4 +73,4 @@
         }, 5000);
     </script>
 </body>
-</html>(
+</html>
