--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1>Gugscon Tap</h1>
     <p id="score">Очки: 0</p>
     <p id="energy">Энергия: 10</p>
-    <button id="tap"><img id="duck" src="https://i.imgur.com/9KYKtVh.png" alt="Утка"></button>
+    <button id="tap"><img id="duck" src=https://imgur.com/gallery/ZPjSjNi="Утка"></button>
 
     <script>
         let score = 0;
